--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
   </head>
   <body>
     <!-- Page header -->
+    <!-- 6 links inline along the top of the page-->
+    <div class="page_header">
 
+    </div>
     <!--Google image -->
-
+      <img id="google_banner" src="images/google_banner.png" alt="google banner">
     <!--Search Bar -->
+      <div class="search_bar">
 
+      </div>
+    <!--Button bar, search & do you feel lucky punk-->
+      <div class="buttons">
+
+      </div>
     <!--Footer-->
+      <div class=page_footer>
 
+      </div>
   </body>
 </html>
