added header, still needs dropdown

--- a/index.html
+++ b/index.html
@@ -10,18 +10,43 @@
     <!-- Page header -->
     <!-- 6 links inline along the top of the page-->
     <div class="page_header">
-
+      <header>
+        <div id="left_header">
+          <a href="#">Web</a>
+          <a href="#">Images</a>
+          <a href="#">Videos</a>
+          <a href="#">Maps</a>
+          <a href="#">News</a>
+          <a href="#">Shopping</a>
+          <a href="#">Gmail</a>
+          more
+        </div>
+        <div id="right_header">
+          <a href="#">iGoogle</a>
+          |
+          <a href="#">Search settings</a>
+          |
+          <a href="#">Sign In</a>
+        </div>
+      </header>
     </div>
     <!--Google image -->
       <img id="google_banner" src="images/google_banner.png" alt="google banner">
     <!--Search Bar -->
       <div class="search_bar">
-
+        <form>
+          <input id="input_box" type="text">
+        </form>
       </div>
     <!--Button bar, search & do you feel lucky punk-->
-      <div class="buttons">
 
-      </div>
+      <form>
+        <div id="buttons">
+          <input type="button" value="Search" name="search_button">
+          <input type="button" value="Feeling Lucky?" name="lucky_button">
+        </div>
+      </form>
+
     <!--Footer-->
       <div class=page_footer>
 
