--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page_header">
       <header>
         <div id="left_header">
-          <a href="#">Web</a>
+          <a href="index.html">Web</a>
           <a href="#">Images</a>
           <a href="#">Videos</a>
           <a href="#">Maps</a>
@@ -48,8 +48,11 @@
       </form>
 
     <!--Footer-->
-      <div class=page_footer>
-
-      </div>
+      <footer>
+        <a href="#">About Google</a>
+        <a href="#">Advertising Programs</a>
+        <a href="#">Business solutions</a>
+        <a href="#">Privacy</a>
+      </footer>
   </body>
 </html>
